[FEATURE] left wall

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <title>Fluffy Giggle</title>
+    <meta charset="UTF-8">
     <style>
         body {
             background: #000000; 
